hide / Preview Option Is Available Test